# aitios-sim

./: Cargo.toml
benches/: simulation.rs  tracing.rs
fixtures/: Cargo.toml
fixtures/src/: lib.rs  venus.rs
src/: lib.rs  motion.rs  sim.rs  surfel_data.rs  surfel_rule.rs  ton.rs  tracer.rs  transport.rs
src/config/: config.rs  mod.rs  transport.rs
test-scenes/: venus.mtl
test-scenes/buddha-scene-ton-source-mesh/: buddha-scene-ton-source-sun.mtl
